--- a/src/components/image/style.css
+++ b/src/components/image/style.css
@@ -1,16 +1,16 @@
 .image-wrapper {
   width: 100%;
   height: 100%;
-  position: relative;
+  /*position: relative;*/
 }
 
 .image-wrapper img {
   width: 100%;
   height: auto;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  /*position: absolute;*/
+  /*left: 50%;*/
+  /*top: 50%;*/
+  /*transform: translate(-50%, -50%);*/
 }
 
 .x-x-x-x > * .image-wrapper img,
